# FTP_C-S

./: CMakeLists.txt  LICENSE  README.md
FTP-master/: TODO  client_ftp.c  client_ftp_functions.c  commons.c  commons.h  server_ftp.c  server_ftp_functions.c
client/: CMakeLists.txt  a.out  client_ftp.c  ftp_client.c  main.c
client/include/: client.h  client_command.h  client_ftp.h  commands.h  common.h  commons.h  file_transfer.h
client/src/: client.c  client_command.c  client_ftp_functions.c  commands.c  common.c  commons.c  file_transfer.c
common/: common.c  common.h  file_transfer.c  file_transfer.h
dir_client/: ftp_client
dir_server/: ftp_server
server/: CMakeLists.txt  ftp_server.c  main.c  server_ftp.c
server/include/: commands.h  common.h  commons.h  file_transfer.h  file_transfer_functions.h  server.h  server_command.h
server/src/: commands.c  common.c  commons.c  file_transfer.c  file_transfer_functions.c  server.c  server_command.c  server_ftp_functions.c
src/client/: client_ftp.c  client_ftp_functions.c
src/server/: server_ftp.c  server_ftp_functions.c
test/: ftp_client  ftp_server
